# MPD

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  roadmap.md
.superpowers/sdd/: progress.md
accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_expand_usuario.py  0003_alter_usuario_managers.py  0004_adicionar_coordenacao.py  0005_gerenciar_usuarios_permissao.py  0006_gerenciar_usuarios_admin.py  0007_drop_coordenacao.py  0008_remove_grupo_coordenador.py
casos/: apps.py
config/: urls.py
config/settings/: base.py  development.py  production.py  test.py
core/: auditlog.py  context_processors.py  csv_export.py  forms.py  mixins.py  permissoes.py  tests.py  urls.py  utils.py  views.py
demandas/: admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  tests.py  urls.py  views.py
demandas/migrations/: 0001_criar_models_demandas.py  0002_grupos_padrao_demandas.py  0003_separar_tema_de_tag.py  0004_grupos_padrao_tema.py  (+9 more)
docs/: briefing-prototipo-frontend.md  debito-tecnico.md  decisoes.md  estrutura-do-repositorio.md  fluxos-de-estado.md  mapa-de-telas.md  modelo-de-dados.md  permissoes.md  roteiro-v0.7.2.md
pessoas/: admin.py  apps.py  deduplicacao.py  forms.py  models.py  signals.py  tests.py  urls.py  viacep.py  views.py
prototipo/: README.md  chat1.md
scripts/: backup.sh
templates/: _color_picker.html  _drawer_criar_parte.html  _form_erros_resumo.html  _icon_whatsapp.html  base.html
tests/: test_smoke.py
(+105 files in other folders)
