[project]
name = "mpd"
version = "0.3.3"
description = "Mandato Parlamentar Digital"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
    "django-auditlog>=3.0",
    "django-axes>=7.0",
    "django-htmx>=1.17",
    "whitenoise>=6.6",
    "pillow>=10.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.5",
    "black>=24.0",
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
    "staticfiles",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "DJ"]
ignore = ["E501", "DJ012"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    \.venv
  | migrations
  | staticfiles
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py"]
addopts = "--reuse-db --no-cov-on-fail"
